add Box and spawn function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ endif()
 install(
   PROGRAMS
     src/PotentialFieldVisualizer.py  # Python 스크립트 경로
+    src/SpawnObjectNode.py
   DESTINATION lib/${PROJECT_NAME}      # 실행 파일 설치 경로
 )
 
