--- a/config/navigation2.yaml
+++ b/config/navigation2.yaml
@@ -174,15 +174,15 @@ local_costmap:
       robot_base_frame: fixed_base
       use_sim_time: True
       rolling_window: true
-      width: 3
-      height: 3
+      width: 15
+      height: 15
       resolution: 0.05
       robot_radius: 0.32
       plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 1.0
-        cost_scaling_factor: 3.0
+        inflation_radius: 0.05
+        cost_scaling_factor: 5.0
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -279,7 +279,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.55
+        inflation_radius: 0.05
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
@@ -295,7 +295,7 @@ map_server:
 
 map_saver:
   ros__parameters:
-    use_sim_time: True15
+    use_sim_time: True
     save_map_timeout: 5.0
     free_thresh_default: 0.25
     occupied_thresh_default: 0.65
