--- a/config/navigation2.yaml
+++ b/config/navigation2.yaml
@@ -18,8 +18,8 @@ amcl:
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
-    max_particles: 2000
-    min_particles: 500
+    max_particles: 5000
+    min_particles: 2000
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
@@ -33,9 +33,9 @@ amcl:
     transform_tolerance: 1.0
     update_min_a: 0.2
     update_min_d: 0.25
-    z_hit: 0.5
+    z_hit: 0.7
     z_max: 0.05
-    z_rand: 0.5
+    z_rand: 0.3
     z_short: 0.05
     scan_topic: scan
 
@@ -124,42 +124,40 @@ controller_server:
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.0
-      min_vel_y: 0.0
-      max_vel_x: 1.00
-      max_vel_y: 0.0
-      max_vel_theta: 1.0
-      min_speed_xy: 0.0
-      max_speed_xy: 1.00
-      min_speed_theta: 0.0
-      acc_lim_x: 2.5
-      acc_lim_y: 0.0
-      acc_lim_theta: 3.2
-      decel_lim_x: -2.5
-      decel_lim_y: 0.0
-      decel_lim_theta: -3.2
-      vx_samples: 20
-      vy_samples: 0
-      vtheta_samples: 40
-      sim_time: 1.5
-      linear_granularity: 0.05
-      angular_granularity: 0.025
-      transform_tolerance: 0.2
-      xy_goal_tolerance: 0.05
-      trans_stopped_velocity: 0.25
+      min_vel_x: -100.0            # 후진 제거로 장애물 회피 간소화
+      max_vel_x: 100.0            # 속도 제한
+      min_vel_theta: 1.0        # 최소 각속도 유지
+      max_vel_theta: 200.0        # 최대 각속도를 줄여 회전 안정성 증가
+      min_speed_theta: 100.0
+      max_speed_theta: 200.0
+      acc_lim_theta: 40.0        # 각속도 가속도 제한
+      decel_lim_theta: -40.0     # 각속도 감속도 제한
+      min_speed_xy: -10.0
+      max_speed_xy: 10.0         # 직선 이동 속도 제한
+      acc_lim_x: 2.5            # 선속도 가속도 제한
+      decel_lim_x: -10.5         # 선속도 감속도 제한
+      vx_samples: 90            # 샘플링 단순화
+      vtheta_samples: 80        # 회전 샘플 감소
+      sim_time: 1.5             # 시뮬레이션 시간 감소
+      linear_granularity: 0.05  # 선형 샘플링 간격 조정
+      angular_granularity: 0.02 # 회전 샘플링 간격 조정
+      transform_tolerance: 0.3
+      xy_goal_tolerance: 0.15   # 목표 도달 허용 오차 증가
+      trans_stopped_velocity: 0.1
       short_circuit_trajectory_evaluation: True
       stateful: True
-      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
-      BaseObstacle.scale: 0.02
-      PathAlign.scale: 32.0
-      PathAlign.forward_point_distance: 0.1
-      GoalAlign.scale: 24.0
-      GoalAlign.forward_point_distance: 0.1
-      PathDist.scale: 32.0
-      GoalDist.scale: 24.0
-      RotateToGoal.scale: 32.0
-      RotateToGoal.slowing_factor: 5.0
-      RotateToGoal.lookahead_time: -1.0
+      critics: ["BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      BaseObstacle.scale: 1.5              # 장애물 회피 강화를 위한 스케일 증가
+      PathAlign.scale: 10.0                # 경로 정렬 중요도 감소
+      GoalAlign.scale: 10.0                # 목표 정렬 중요도 유지
+      PathDist.scale: 10.0                 # 경로 거리 중요도 유지
+      GoalDist.scale: 20.0                 # 목표 거리 중요도 유지
+      RotateToGoal.scale: 80.0             # 회전 Critic의 중요도 대폭 감소
+      RotateToGoal.slowing_factor: 50.0     # 감속 계수 감소
+      RotateToGoal.lookahead_time: 0.25     # 예측 시간 단축
+
+
+
       
 controller_server_rclcpp_node:
   ros__parameters:
@@ -177,16 +175,16 @@ local_costmap:
       width: 15
       height: 15
       resolution: 0.05
-      robot_radius: 0.32
+      robot_radius: 0.9
       plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 0.05
+        inflation_radius: 0.15
         cost_scaling_factor: 5.0
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        observation_sources: scan
+        observation_sources: scan depth_camera
         scan:
           topic: /scan
           max_obstacle_height: 2.0
@@ -197,6 +195,16 @@ local_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 5.0
           obstacle_min_range: 0.0
+        depth_camera:
+          topic: /camera/depth/points
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "PointCloud2"
+          raytrace_max_range: 5.0
+          raytrace_min_range: 0.2
+          obstacle_max_range: 5.0
+          obstacle_min_range: 0.2
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -206,7 +214,7 @@ local_costmap:
         z_voxels: 16
         max_obstacle_height: 2.0
         mark_threshold: 0
-        observation_sources: scan
+        observation_sources: scan depth_camera
         scan:
           topic: /scan
           max_obstacle_height: 2.0
@@ -217,15 +225,16 @@ local_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 5.0
           obstacle_min_range: 0.0
-      static_layer:
-        map_subscribe_transient_local: True
-      always_send_full_costmap: True
-  local_costmap_client:
-    ros__parameters:
-      use_sim_time: True
-  local_costmap_rclcpp_node:
-    ros__parameters:
-      use_sim_time: True
+        depth_camera:
+          topic: /camera/depth/points
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "PointCloud2"
+          raytrace_max_range: 5.0
+          raytrace_min_range: 0.2
+          obstacle_max_range: 5.0
+          obstacle_min_range: 0.2
 
 global_costmap:
   global_costmap:
@@ -235,14 +244,14 @@ global_costmap:
       global_frame: map
       robot_base_frame: fixed_base
       use_sim_time: True
-      robot_radius: 0.32
+      robot_radius: 0.9
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "voxel_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        observation_sources: scan
+        observation_sources: scan depth_camera
         scan:
           topic: /scan
           max_obstacle_height: 2.0
@@ -253,6 +262,16 @@ global_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 10.0
           obstacle_min_range: 0.0
+        depth_camera:
+          topic: /camera/depth/points
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "PointCloud2"
+          raytrace_max_range: 10.0
+          raytrace_min_range: 0.2
+          obstacle_max_range: 10.0
+          obstacle_min_range: 0.2
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -262,7 +281,7 @@ global_costmap:
         z_voxels: 16
         max_obstacle_height: 2.0
         mark_threshold: 0
-        observation_sources: scan
+        observation_sources: scan depth_camera
         scan:
           topic: /scan
           max_obstacle_height: 2.0
@@ -273,6 +292,16 @@ global_costmap:
           raytrace_min_range: 0.0
           obstacle_max_range: 10.0
           obstacle_min_range: 0.0
+        depth_camera:
+          topic: /camera/depth/points
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "PointCloud2"
+          raytrace_max_range: 10.0
+          raytrace_min_range: 0.2
+          obstacle_max_range: 10.0
+          obstacle_min_range: 0.2
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
@@ -281,12 +310,6 @@ global_costmap:
         cost_scaling_factor: 3.0
         inflation_radius: 0.05
       always_send_full_costmap: True
-  global_costmap_client:
-    ros__parameters:
-      use_sim_time: True
-  global_costmap_rclcpp_node:
-    ros__parameters:
-      use_sim_time: True
 
 map_server:
   ros__parameters:
